# fraud-detection-engine

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.claude/: launch.json  settings.local.json
.github/workflows/: ci.yml
configs/: behavioral_deviation.yaml  coldstart.yaml  economic_defaults.yaml  email_providers.yaml  feature_defaults.yaml  historical_stats.yaml  logging.yaml  model_best_params.yaml  reason_codes.yaml  redis_feature_store.yaml  schemas.yaml  target_encoder.yaml  tier3_config.yaml  tier4_config.yaml  velocity.yaml
configs/alerts/: alert_rules.yml
configs/grafana/: dashboards.yml  datasources.yml  fraud_dashboard.json
configs/nginx/: nginx.conf
configs/prometheus/: prometheus.yml
data/raw/: MANIFEST.json
docker/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CONVENTIONS.md  DATA_DICTIONARY.md  FEATURE_DOCUMENTATION.md  INTERVIEW_GUIDE.md  MODEL_CARD.md  OBSERVABILITY.md  RUNBOOK.md  TIER4_EWM_DESIGN_BRIEF.md
docs/ADR/: 0001-tech-stack.md  0002-temporal-split.md  0003-economic-threshold.md  0004-shadow-mode.md  0005-lightgbm-as-production.md  0006-graph-features-batch.md
models/: best_params.json
notebooks/: 00_observability_demo.ipynb  01_eda.ipynb  05_graph_analysis.ipynb  memory_usage.ipynb  transactions_eda.ipynb
reports/: economic_evaluation.md  graph_feature_analysis.md  model_a_training_report.md  model_b_training_report.md  model_c_training_report.md  model_comparison.md  shadow_mode_results.txt  sprint1_eda_summary.md  v_feature_reduction_report.md
scripts/: _build_eda_notebook.py  _build_graph_analysis_notebook.py  _run_lineage.sh  _seed_best_params_smoke.py  build_drift_baseline.py  build_features_all_tiers.py  build_features_tier1.py  build_features_tier1_2.py  build_features_tier1_2_3.py  build_features_tier1_2_3_4.py  build_interim.py  create_predictions_table.sql  demo_prediction.py  download_data.py  profile_raw.py  profile_v_reduction.py  run_economic_evaluation.py  run_sprint1_baseline.py  shadow_compare_report.py  train_gnn.py  train_lightgbm.py  train_neural.py  verify_bootstrap.py  verify_lineage.py  warmup_redis.py
sprints/sprint_0/: gate_0_1_report.md  prompt_0_1_a_report.md  prompt_0_1_b_report.md  prompt_0_1_c_report.md  prompt_0_1_d_report.md  prompt_0_1_e_report.md  prompt_0_1_f_report.md  prompt_0_1_g_report.md  prompt_0_1_h_report.md  prompt_0_1_report.md  prompt_0_2_a_report.md  prompt_0_2_b_report.md  prompt_0_2_c_report.md  prompt_0_2_d_report.md  prompt_0_2_report.md  prompt_0_3_a_report.md  prompt_0_3_b_report.md  (+5 more)
src/: config.py  pipeline.py  train.py  tune.py  utils.py
tests/: conftest.py  run_live_tests.py  test_api_live.py  test_suite.py
(+206 files in other folders)
