[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fraud-engine"
version = "0.1.0"
description = "Production-grade real-time fraud detection engine."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
authors = [{ name = "Fraud Detection Team" }]

# Core runtime dependencies.
# Pinning policy: exact pins for reproducibility. Drift is caught by `uv lock`
# during commit 2 of Sprint 0. Any bump is recorded in the sprint report.
dependencies = [
  # --- core ---
  "pandas==2.2.3",
  "numpy==2.2.0",
  "pyarrow==19.0.0",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.1",
  "pandera[io]==0.22.1",
  "structlog==25.1.0",
  "click==8.1.8",
  "python-dotenv==1.0.1",
  # --- ml ---
  "scikit-learn==1.6.0",
  "lightgbm==4.5.0",
  "shap==0.46.0",
  "optuna==4.1.0",
  "cleanlab==2.9.0",
  "torch==2.5.1",
  "torch-geometric==2.6.1",
  "networkx==3.4.2",
  # --- plotting / stats (Sprint 1 notebook imports these explicitly;
  # transitive via sklearn/shap but pinned here so --nbmake runs
  # deterministically across environments) ---
  "matplotlib==3.10.0",
  "seaborn==0.13.2",
  "scipy==1.15.0",
  "joblib==1.4.2",
  # --- serving ---
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "redis==5.2.1",
  "httpx==0.28.1",
  "asyncpg==0.30.0",
  # --- monitoring ---
  "prometheus-client==0.21.1",
  "mlflow==3.11.1",
  # --- data acquisition ---
  "kaggle==1.6.17",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "pytest-asyncio==0.25.1",
  "hypothesis==6.123.2",
  "ruff==0.8.5",
  "mypy==1.14.1",
  "pyright==1.1.391",
  "pre-commit==4.0.1",
  "detect-secrets==1.5.0",
  "ipykernel==6.29.5",
  "jupyter==1.1.1",
  "nbmake==1.5.5",
  "pandas-stubs==2.2.3.241126",
  "types-click==7.1.8",
  "ydata-profiling==4.18.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_engine"]

[tool.uv]
# uv resolves the [project.optional-dependencies.dev] group via
# `uv sync --all-extras`. The Makefile uses that target.
package = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
  "--cov=fraud_engine",
  "--cov-report=term-missing",
]
markers = [
  "integration: multi-component tests that touch Redis/Postgres/MLflow",
  "lineage: schema-contract tests across pipeline stages",
  "slow: tests that exceed 1 second",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["fraud_engine"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
